--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Astronomy Picture of the Day - APOD NASA</title>
+    <meta http-equiv="Content-Language" content="en">
+
     <link rel="icon" href="./src/assets/images/favicon.ico" />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-    <title>React-Apod Nasa</title>
+    <!-- SEO -->
+    <meta name="description" content="View, download and learn about NASA's Astronomy Picture of the Day, along with a description, for the current date or for a custom date throughout its history since its creation in 1995 by Robert Nemiroff and Jerry Bonnell." />
+    <meta name="keywords" content="apod, nasa, astronomy, picture, of, the, day">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Astronomy Picture of the Day by NASA">
+    <meta property="og:description" content="View, download and learn about NASA's Astronomy Picture of the Day, along with a description, for the current date or for a custom date throughout its history since its creation in 1995 by Robert Nemiroff and Jerry Bonnell.">
+    <meta property="og:image" content="/src/assets/images/og-image.png">
+    <meta property="og:image:alt" content="Astronomy Picture of the Day by NASA">
+
+    <meta name="robots" content="index, follow">
   </head>
   <body>
     <section class="wrapper" style="position: fixed;">
