add google site verification

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astronomy Picture of the Day - APOD NASA</title>
     <meta http-equiv="Content-Language" content="en">
+    <meta name="google-site-verification" content="G1AqUTz3LbWalgzfkepNLwuImn5igzTiMazgtL5zT-M" />
 
     <link rel="icon" href="./src/assets/images/favicon.ico" />
     <!-- CSS only -->
